<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_main_menu"
        android:title="@string/menu_option_main_menu"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/action_vegetable_menu"
        android:title="@string/menu_option_vegetable_menu"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/action_my_plants"
        android:title="@string/menu_option_my_plants"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/action_login"
        android:title="@string/menu_option_login"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_option_settings"
        app:showAsAction="never">
    </item>

</menu>