<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/customDialogLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="@color/backgroundGrey"
    android:padding="20dp">

    <TextView
        android:id="@+id/txtViewDeletePlantDialogHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="@color/cadetBlue"
        android:text="@string/txt_confirm_delete" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtViewDeletePlantDialogHeading"
        android:layout_marginTop="30dp">

        <ImageButton
            android:id="@+id/btnConfirmDelete"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:scaleType="fitCenter"
            android:padding="8dp"
            android:background="@drawable/btn_style_rounded"
            android:src="@drawable/tick_icon"
            android:contentDescription="@string/image_icon_tick" />

        <ImageButton
            android:id="@+id/btnCancelDelete"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:scaleType="fitCenter"
            android:padding="9dp"
            android:background="@drawable/btn_style_rounded"
            android:src="@drawable/cancel_icon"
            android:contentDescription="@string/image_icon_cancel" />

    </RelativeLayout>

</RelativeLayout>