<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGrey"
    tools:context=".MainMenu">

    <include
        android:id="@+id/growMateToolbar"
        layout="@layout/layout_toolbar" />

    <TextView
        android:id="@+id/mainMenuHeading"
        style="@style/ActivityHeadings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/growMateToolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/heading_main_menu" />

    <View
        android:id="@+id/divider"
        android:layout_width="320dp"
        android:layout_height="3dp"
        android:layout_below="@+id/mainMenuHeading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/cadetBlue" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/mainMenuBtnLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/vegetableBunch2"
        android:layout_below="@+id/divider"
        android:padding="20dp">

        <Button
            android:id="@+id/btnAccessVegetableMenu"
            style="@style/MainMenuButtonStyle"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/btn_style_rounded"
            android:text="@string/btn_access_vegetable_menu"
            app:layout_constraintBottom_toTopOf="@+id/btnAccessMyPlants"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnAccessMyPlants"
            style="@style/MainMenuButtonStyle"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/btn_style_rounded"
            android:text="@string/btn_access_my_plants_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAccessVegetableMenu" />

    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/vegetableBunch2"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/image_vegetable_bunch2"
        app:srcCompat="@drawable/vegetable_bunch2" />

</RelativeLayout>