<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGrey"
    tools:context=".MyPlants">

    <include
        android:id="@+id/growMateToolbar"
        layout="@layout/layout_toolbar">
    </include>

    <TextView
        android:id="@+id/txtViewCurrentGrowingHeading"
        style="@style/ActivityHeadings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/growMateToolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/heading_my_plants" />

    <View
        android:id="@+id/divider"
        android:layout_width="350dp"
        android:layout_height="3dp"
        android:layout_below="@+id/txtViewCurrentGrowingHeading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/cadetBlue"/>

    <TextView
        android:id="@+id/txtViewEmptyListMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/divider"
        android:layout_marginTop="100dp"
        android:text="@string/hint_empty_list"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/cadetBlue" />

    <ListView
        android:id="@+id/plantList"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_below="@+id/divider"
        android:layout_above="@+id/btnAccessMainMenu"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:dividerHeight="1dp"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <Button
        android:id="@+id/btnAccessMainMenu"
        android:background="@drawable/btn_style_square_alternate"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_access_main_menu" />

</RelativeLayout>